Adds transitions and the modal window

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!-- Hero section -->
       <section class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-button" type="button">Замовити послугу</button>
+        <button class="hero-button" type="button" data-modal-open>Замовити послугу</button>
       </section>
 
       <!-- Features section -->
@@ -124,6 +124,7 @@
                 height="294"
                 alt="Розробка веб-сайтів"
               />
+              <p class="activity-desc">Десктопні додатки</p>
             </li>
             <li class="activity-item">
               <img
@@ -133,6 +134,7 @@
                 height="294"
                 alt="Тестування веб-сайтів"
               />
+              <p class="activity-desc">Мобільні додатки</p>
             </li>
             <li class="activity-item">
               <img
@@ -142,6 +144,7 @@
                 height="294"
                 alt="Створення дизайну веб-сайтів"
               />
+              <p class="activity-desc">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
@@ -518,5 +521,11 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-btn"></button>
+      </div>
+    </div>
   </body>
 </html>
