--- a/portfolio.html
+++ b/portfolio.html
@@ -75,13 +75,20 @@
           <ul class="gallery-items">
             <li class="gallery-item">
               <a class="gallery-link" href="./index.html">
-                <img
-                  class="gallery-image"
-                  src="./images/portfolio/gallery-item-1.jpg"
-                  alt="Приклад веб-сайту"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-thumb">
+                  <img
+                    class="gallery-image"
+                    src="./images/portfolio/gallery-item-1.jpg"
+                    alt="Приклад веб-сайту"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="gallery-overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
                 <div class="gallery-details">
                   <h2 class="gallery-subtitle">Технокряк</h2>
                   <p class="gallery-description">Веб-сайт</p>
@@ -90,13 +97,20 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link" href="./index.html">
-                <img
-                  class="gallery-image"
-                  src="./images/portfolio/gallery-item-2.jpg"
-                  alt="Приклад дизайну"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-thumb">
+                  <img
+                    class="gallery-image"
+                    src="./images/portfolio/gallery-item-2.jpg"
+                    alt="Приклад дизайну"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="gallery-overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
                 <div class="gallery-details">
                   <h2 class="gallery-subtitle">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -107,13 +121,20 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link" href="./index.html">
-                <img
-                  class="gallery-image"
-                  src="./images/portfolio/gallery-item-3.jpg"
-                  alt="Приклад додатку"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-thumb">
+                  <img
+                    class="gallery-image"
+                    src="./images/portfolio/gallery-item-3.jpg"
+                    alt="Приклад додатку"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="gallery-overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
                 <div class="gallery-details">
                   <h2 class="gallery-subtitle">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="gallery-description">Додаток</p>
@@ -122,13 +143,20 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link" href="./index.html">
-                <img
-                  class="gallery-image"
-                  src="./images/portfolio/gallery-item-4.jpg"
-                  alt="Приклад маркетингу"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-thumb">
+                  <img
+                    class="gallery-image"
+                    src="./images/portfolio/gallery-item-4.jpg"
+                    alt="Приклад маркетингу"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="gallery-overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
                 <div class="gallery-details">
                   <h2 class="gallery-subtitle">Проєкт <span lang="en">Prime</span></h2>
                   <p class="gallery-description">Маркетинг</p>
@@ -137,13 +165,20 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link" href="./index.html">
-                <img
-                  class="gallery-image"
-                  src="./images/portfolio/gallery-item-5.jpg"
-                  alt="Приклад додатку"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-thumb">
+                  <img
+                    class="gallery-image"
+                    src="./images/portfolio/gallery-item-5.jpg"
+                    alt="Приклад додатку"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="gallery-overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
                 <div class="gallery-details">
                   <h2 class="gallery-subtitle">Проєкт <span lang="en">Boxes</span></h2>
                   <p class="gallery-description">Додаток</p>
@@ -152,13 +187,20 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link" href="./index.html">
-                <img
-                  class="gallery-image"
-                  src="./images/portfolio/gallery-item-6.jpg"
-                  alt="Приклад веб-сайту"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-thumb">
+                  <img
+                    class="gallery-image"
+                    src="./images/portfolio/gallery-item-6.jpg"
+                    alt="Приклад веб-сайту"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="gallery-overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
                 <div class="gallery-details">
                   <h2 class="gallery-subtitle" lang="en">Inspiration has no Borders</h2>
                   <p class="gallery-description">Веб-сайт</p>
@@ -167,13 +209,20 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link" href="./index.html">
-                <img
-                  class="gallery-image"
-                  src="./images/portfolio/gallery-item-7.jpg"
-                  alt="Приклад дизайну"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-thumb">
+                  <img
+                    class="gallery-image"
+                    src="./images/portfolio/gallery-item-7.jpg"
+                    alt="Приклад дизайну"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="gallery-overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
                 <div class="gallery-details">
                   <h2 class="gallery-subtitle">Видання <span lang="en">Limited Edition</span></h2>
                   <p class="gallery-description">Дизайн</p>
@@ -182,13 +231,20 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link" href="./index.html">
-                <img
-                  class="gallery-image"
-                  src="./images/portfolio/gallery-item-8.jpg"
-                  alt="Приклад маркетингу"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-thumb">
+                  <img
+                    class="gallery-image"
+                    src="./images/portfolio/gallery-item-8.jpg"
+                    alt="Приклад маркетингу"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="gallery-overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
                 <div class="gallery-details">
                   <h2 class="gallery-subtitle">Проєкт <span lang="en">LAB</span></h2>
                   <p class="gallery-description">Маркетинг</p>
@@ -197,13 +253,20 @@
             </li>
             <li class="gallery-item">
               <a class="gallery-link" href="./index.html">
-                <img
-                  class="gallery-image"
-                  src="./images/portfolio/gallery-item-9.jpg"
-                  alt="Приклад додатку"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-thumb">
+                  <img
+                    class="gallery-image"
+                    src="./images/portfolio/gallery-item-9.jpg"
+                    alt="Приклад додатку"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="gallery-overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </div>
+                </div>
                 <div class="gallery-details">
                   <h2 class="gallery-subtitle" lang="en">Growing Business</h2>
                   <p class="gallery-description">Додаток</p>
