--- a/index.html
+++ b/index.html
@@ -522,10 +522,16 @@
       </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-btn"></button>
+        <button class="modal-btn" type="button" data-modal-close>
+          <svg class="modal-icon" width="18" height="18">
+            <use href="./images/icons.svg#icon-cross"></use>
+          </svg>
+        </button>
       </div>
     </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
